objects/GRP_CC_Contract__c.object
<CustomObject>
    <description>GRP_CC Connected Customer Application Object</description>
    <fields>
        <fullName>Days_to_1st_Reminder_Chain_Acct_Resp__c</fullName>
        <inlineHelpText>Days after (or before) the end collect date to send the 1st email reminder for the Chain Acct Responsible</inlineHelpText>
        <label>Days to 1st Reminder Chain Acct Resp.</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_2nd_Reminder_Chain_Acct_Resp__c</fullName>
        <inlineHelpText>Days after (or before) the end collect date to send the 2nd email reminder for the Chain Acct Responsible</inlineHelpText>
        <label>Days to 2nd Reminder Chain Acct Resp.</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champagnes</fullName>
                </value>
                <value>
                    <fullName>Spirits</fullName>
                </value>
                <value>
                    <fullName>Wines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRP_CC_Cycle__c</fullName>
        <inlineHelpText>The value of this field determines the frequency in which the collects will be filled in by the chain account responsible. E.g.: If the value is 1, the chain account commits to a monthly update in the platform</inlineHelpText>
        <label>Cycle Duration (in months)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_CC_EndCollectOneDate__c</fullName>
        <inlineHelpText>You can select the 1st collect end date in order to have, from the 2nd collect, regular periods of time, taking into account the cycle duration</inlineHelpText>
        <label>1st Collect End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GRP_CC_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GRP_CC_First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GRP_CC_Category__c</columns>
        <columns>GRP_CC_Start_Date__c</columns>
        <columns>GRP_CC_End_Date__c</columns>
        <columns>GRP_CC_EndCollectOneDate__c</columns>
        <columns>GRP_CC_Cycle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Contract Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>